--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ dialog {
   padding: 1rem;
   border: none;
   outline: none;
-  background-color: rgba(56, 36, 17);
+  color: rgba(56, 36, 17);
   background-color: rgba(255, 235, 239, 0.7);
   /* max-width: 30ch; */
 }
