--- a/styles.css
+++ b/styles.css
@@ -4,66 +4,8 @@
   box-sizing: border-box;
 }
 
-body {
-  width: min(98%, 1200px);
-  padding: 2rem 0;
-  margin: 0 auto;
-  font-size: 1.8rem;
-  background-color: rgba(255, 235, 239, 0.7);
-  height: 100svh;
-  display: grid;
-  grid-template-rows: max-content 1fr;
-  gap: 2rem;
-}
 
 h1 {
+margin-top: 45px;
   text-align: center;
-  color: #382411;
-}
-
-main {
-}
-
-.buttons {
-  text-align: center;
-  display: flex;
-  align-items: center;
-  gap: 1.5rem;
-  flex-direction: column;
-  min-height: 100%;
-}
-
-button {
-  font-size: 1.3rem;
-  background-color: rgba(56, 36, 17);
-  border: 1px solid rgba(56, 36, 17);
-  color: white;
-  font-weight: bold;
-  padding: 0.5em 1em;
-  border-radius: 10px;
-  outline: transparent;
-  transition: transform 0.3s ease;
-}
-
-button:hover,
-button:focus-visible {
-  transform: scale(1.15);
-}
-
-.random {
-  flex: 1;
-  width: 100%;
-}
-
-dialog {
-  margin: auto;
-  padding: 1rem;
-  border: none;
-  outline: none;
-  color: rgba(56, 36, 17);
-  background-color: rgba(255, 235, 239, 0.7);
-  /* max-width: 30ch; */
-}
-dialog::backdrop {
-  background-color: rgb(255, 235, 239);
 }
